升级Dotnet7，并解决部分警告代码；

--- a/src/Dotnet9.Commons/Dotnet9.Commons.csproj
+++ b/src/Dotnet9.Commons/Dotnet9.Commons.csproj
@@ -3,8 +3,8 @@
 	<ItemGroup>
 		<PackageReference Include="AsmResolver.DotNet" Version="4.11.2" />
 		<PackageReference Include="FluentValidation" Version="11.2.2" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.2" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0-rc.1.22426.10" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0-rc.1.22426.10" />
 	</ItemGroup>
 
 </Project>
