--- a/src/Dotnet9.DomainCommons/Dotnet9.DomainCommons.csproj
+++ b/src/Dotnet9.DomainCommons/Dotnet9.DomainCommons.csproj
@@ -2,7 +2,7 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="10.0.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0-rc.1.22426.10" />
   </ItemGroup>
 
   <ItemGroup>
