--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/appsettings.json
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/appsettings.json
@@ -26,6 +26,7 @@
     "ValineConfig": {
       "AppId": "your appid",
       "AppKey": "your appkey",
+      "ServerURL": "https://your serverurl",
       "Notify": false,
       "Verify": false,
       "Placeholder": "填写邮箱可以收到回复提醒哦",
