--- a/.gitignore
+++ b/.gitignore
@@ -355,3 +355,4 @@ src/Dotnet9.Web.Go/appsettings.toml
 src/Dotnet9.Web.Go/goweb.exe
 src/Dotnet9.Web.RazorPages/Dotnet9.Web/appsettings.Development.json
 src/Dotnet9.Web.RazorPages/Dotnet9.Web/appsettings.Production.json
+src/Dotnet9.Web.RazorPages/Dotnet9.Web/.config/dotnet-tools.json
