--- a/.gitignore
+++ b/.gitignore
@@ -349,10 +349,7 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 *.jwk
-src/Dotnet9.Admin.WebAPI/Dotnet9.WebAPI/appsettings.Development.json
-src/Dotnet9.Admin.WebAPI/Dotnet9.WebAPI/appsettings.Production.json
+appsettings.*.json
+*.exe
 src/Dotnet9.Web.Go/appsettings.toml
-src/Dotnet9.Web.Go/goweb.exe
-src/Dotnet9.Web.RazorPages/Dotnet9.Web/appsettings.Development.json
-src/Dotnet9.Web.RazorPages/Dotnet9.Web/appsettings.Production.json
 src/Dotnet9.Web.RazorPages/Dotnet9.Web/.config/dotnet-tools.json
