生产环境与开发环境统一端口，方便开发时前台js调用后端接口；

--- a/src/Dotnet9.Admin.WebAPI/Dotnet9.WebAPI/appsettings.json
+++ b/src/Dotnet9.Admin.WebAPI/Dotnet9.WebAPI/appsettings.json
@@ -30,7 +30,7 @@
     "ConnectionString": "127.0.0.1:6379,password=,connectTimeout=4000,connectRetry=1,syncTimeout=1000"
   },
   "Cors": {
-    "Origins": [ "http://127.0.0.1:8080", "http://localhost:8080" ]
+    "Origins": [ "http://localhost:5000" ]
   },
   "AllowedHosts": "*"
 }
