--- a/src/Dotnet9.Admin.WebAPI/Dotnet9.WebAPI/Properties/launchSettings.json
+++ b/src/Dotnet9.Admin.WebAPI/Dotnet9.WebAPI/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7219;http://localhost:5141",
+      "applicationUrl": "http://localhost:5005",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
