go添加搜索功能；

--- a/src/Dotnet9.Admin.WebAPI/Dotnet9.WebAPI/appsettings.json
+++ b/src/Dotnet9.Admin.WebAPI/Dotnet9.WebAPI/appsettings.json
@@ -30,7 +30,7 @@
     "ConnectionString": "127.0.0.1:6379,password=,connectTimeout=4000,connectRetry=1,syncTimeout=1000"
   },
   "Cors": {
-    "Origins": [ "http://localhost:5000" ]
+    "Origins": [ "http://localhost:5000", "http://localhost:8080" ]
   },
   "AllowedHosts": "*"
 }
