--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web.ViewModel/Dotnet9.Web.ViewModel.csproj
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web.ViewModel/Dotnet9.Web.ViewModel.csproj
@@ -2,4 +2,7 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Dotnet9.Admin.WebAPI\Dotnet9.WebAPI.ViewModel\Dotnet9.WebAPI.ViewModel.csproj" />
+  </ItemGroup>
 </Project>
