--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/appsettings.json
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
   "Site": {
     "AppName": "Dotnet9",
-    "Description": "一个专注互联网分享精神的博客网站",
+    "Subheading": "一个专注互联网分享精神的博客网站",
+    "Description": "Dotnet9，专注ASP.NET Core网站开发、MAUI跨平台应用开发、WPF客户端开发，同时以https://Dotnet9.com网站分享一些技术类文章，欢迎交流、学习。",
     "Domain": "https://dotnet9.com",
     "BeiAn": "蜀ICP备19038256号-1",
     "BeiAnUrl": "https://beian.miit.gov.cn/",
