--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/appsettings.json
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/appsettings.json
@@ -19,7 +19,11 @@
     "AssetsRemotePath": "https://img1.dotnet9.com",
     "Owner": "沙漠尽头的狼",
     "OwnerAvatar": "https://img1.dotnet9.com/site/cat.png",
-    "OwnerDesc": "本站（https://dotnet9.com）站长“沙漠尽头的狼”，从事Dotnet开发10年+，建此站目的在于分享以Dotnet为主的技术类文章，希望以此平台与更多的程序员朋友交流技术，祝愿Dotnet社区发展越来越好。",
+    "OwnerDesc": "分享以Dotnet为主的技术类文章，祝愿Dotnet社区发展越来越好。",
+    "WechatPublic1Name": "Dotnet9",
+    "WechatPublic1": "https://img1.dotnet9.com/site/wechatpublic.jpg",
+    "WechatPublic2Name": "快乐玩转技术",
+    "WechatPublic2": "https://img1.dotnet9.com/lequ.co/8cm.jpg",
     "Start": 2019,
     "Bilibili": "https://space.bilibili.com/470546606",
     "Zhihu": "https://www.zhihu.com/people/dotnet9/activities",
