--- a/src/Dotnet9.Admin.WebAPI/Dotnet9.WebAPI/appsettings.json
+++ b/src/Dotnet9.Admin.WebAPI/Dotnet9.WebAPI/appsettings.json
@@ -14,7 +14,7 @@
   },
   "DefaultDB": {
     "DbType": "PostgreSQL",
-    "ConnectionString": "Host=[ip];Username=postgres;Database=dotnet9;port=5432;password=[password];"
+    "ConnectionString": "Host=[ip];Username=postgres;Database=Dotnet9;port=5432;password=[password];"
   },
   "JWT": {
     "Audience": "dotnet9",
