--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/appsettings.json
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/appsettings.json
@@ -44,7 +44,7 @@
   },
   "DefaultDB": {
     "DbType": "PostgreSQL",
-    "ConnectionString": "Host=[ip];Username=postgres;Database=dotnet9;port=5432;password=[password];"
+    "ConnectionString": "Host=[ip];Username=postgres;Database=Dotnet9;port=5432;password=[password];"
   },
   "RabbitMQ": {
     "HostName": "127.0.0.1",
