--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/appsettings.json
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/appsettings.json
@@ -20,6 +20,7 @@
     "Owner": "沙漠尽头的狼",
     "OwnerAvatar": "https://img1.dotnet9.com/site/cat.png",
     "OwnerDesc": "分享以Dotnet为主的技术类文章，祝愿Dotnet社区发展越来越好。",
+    "OwnerWechat": "https://img1.dotnet9.com/site/wechatowner.jpg",
     "WechatPublic1Name": "Dotnet9",
     "WechatPublic1": "https://img1.dotnet9.com/site/wechatpublic.jpg",
     "WechatPublic2Name": "快乐玩转技术",
