--- a/src/Dotnet9.Dotnet.Commons/Dotnet9.Commons/Dotnet9.Commons.csproj
+++ b/src/Dotnet9.Dotnet.Commons/Dotnet9.Commons/Dotnet9.Commons.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<ItemGroup>
-		<PackageReference Include="AsmResolver.DotNet" Version="4.11.2" />
+		<PackageReference Include="AsmResolver.DotNet" Version="5.0.0-beta.1" />
 		<PackageReference Include="FluentValidation" Version="11.2.2" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0-rc.1.22426.10" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0-rc.1.22426.10" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0-rc.2.22472.3" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0-rc.2.22472.3" />
 	</ItemGroup>
 
 </Project>
