添加评论成功（回复评论还需要调试）；

--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Properties/launchSettings.json
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Properties/launchSettings.json
@@ -2,12 +2,13 @@
   "profiles": {
     "http": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:5000",
+      "hotReloadEnabled": false
     }
   }
 }
