--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/appsettings.json
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/appsettings.json
@@ -28,21 +28,7 @@
     "WechatPublic2": "https://img1.dotnet9.com/lequ.co/8cm.jpg",
     "Start": 2019,
     "Bilibili": "https://space.bilibili.com/470546606",
-    "Zhihu": "https://www.zhihu.com/people/dotnet9/activities",
-    "Valine": true,
-    "ValineConfig": {
-      "AppId": "your appid",
-      "AppKey": "your appkey",
-      "ServerURL": "https://your serverurl",
-      "Notify": false,
-      "Verify": false,
-      "Placeholder": "填写邮箱可以收到回复提醒哦",
-      "Avatar": "monsterid",
-      "PageSize": 10,
-      "Visitor": true,
-      "RecordIP": true,
-      "AdminEmail": "your email"
-    }
+    "Zhihu": "https://www.zhihu.com/people/dotnet9/activities"
   },
   "DefaultDB": {
     "DbType": "PostgreSQL",
