--- a/src/Dotnet9.Admin.WebAPI/Dotnet9.WebAPI.Domain/Dotnet9.WebAPI.Domain.csproj
+++ b/src/Dotnet9.Admin.WebAPI/Dotnet9.WebAPI.Domain/Dotnet9.WebAPI.Domain.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.0-rc.2.22476.2" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
