--- a/src/Dotnet9.Dotnet.Commons/Dotnet9.ASPNETCore/Dotnet9.ASPNETCore.csproj
+++ b/src/Dotnet9.Dotnet.Commons/Dotnet9.ASPNETCore/Dotnet9.ASPNETCore.csproj
@@ -5,7 +5,7 @@
 		<PackageReference Include="Mapster" Version="7.4.0-pre03" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0-rc.2.22472.11" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
 		<PackageReference Include="UAParser" Version="3.1.47" />
 		<PackageReference Include="System.IO.FileSystem" Version="4.3.0" />
 	</ItemGroup>
