--- a/src/Dotnet9.Dotnet.Commons/Dotnet9.AnyDBConfigProvider/Dotnet9.AnyDBConfigProvider.csproj
+++ b/src/Dotnet9.Dotnet.Commons/Dotnet9.AnyDBConfigProvider/Dotnet9.AnyDBConfigProvider.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0-rc.2.22472.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
