--- a/src/Dotnet9.Dotnet.Commons/Dotnet9.DomainCommons/Dotnet9.DomainCommons.csproj
+++ b/src/Dotnet9.Dotnet.Commons/Dotnet9.DomainCommons/Dotnet9.DomainCommons.csproj
@@ -2,7 +2,7 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="11.0.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0-rc.2.22472.3" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
