--- a/src/Dotnet9.Admin.WebAPI/Dotnet9.WebAPI.Infrastructure/Dotnet9.WebAPI.Infrastructure.csproj
+++ b/src/Dotnet9.Admin.WebAPI/Dotnet9.WebAPI.Infrastructure/Dotnet9.WebAPI.Infrastructure.csproj
@@ -3,7 +3,7 @@
 	<ItemGroup>
     <PackageReference Include="Mapster" Version="7.4.0-pre03" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.0" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0-rc.2" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0" />
     <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="7.0.0-rc.2.22472.11-04" />
   </ItemGroup>
 
