简化种子数据初始化；
1、升级nuget包；2、删除数据库配置工程，暂时未使用；3、将种子初始化放在web api启动时完成；

--- a/src/Dotnet9.Dotnet.Commons/Dotnet9.CommonInitializer/Dotnet9.CommonInitializer.csproj
+++ b/src/Dotnet9.Dotnet.Commons/Dotnet9.CommonInitializer/Dotnet9.CommonInitializer.csproj
@@ -4,11 +4,10 @@
 		<PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
 		<PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.0" />
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0" />
-		<PackageReference Include="Serilog.AspNetCore" Version="6.1.0-dev-00285" />
+		<PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Dotnet9.AnyDBConfigProvider\Dotnet9.AnyDBConfigProvider.csproj" />
 		<ProjectReference Include="..\Dotnet9.ASPNETCore\Dotnet9.ASPNETCore.csproj" />
 		<ProjectReference Include="..\Dotnet9.Commons\Dotnet9.Commons.csproj" />
 		<ProjectReference Include="..\Dotnet9.EventBus\Dotnet9.EventBus.csproj" />
