--- a/src/Dotnet9.Dotnet.Commons/Dotnet9.CommonInitializer/Dotnet9.CommonInitializer.csproj
+++ b/src/Dotnet9.Dotnet.Commons/Dotnet9.CommonInitializer/Dotnet9.CommonInitializer.csproj
@@ -2,9 +2,9 @@
 
 	<ItemGroup>
 		<PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
-		<PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.0" />
-		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0" />
-		<PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
+		<PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.2" />
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.1" />
+		<PackageReference Include="Serilog.AspNetCore" Version="6.1.1-dev-00293" />
 	</ItemGroup>
 
 	<ItemGroup>
