--- a/src/Dotnet9.Dotnet.Commons/Dotnet9.Commons/Dotnet9.Commons.csproj
+++ b/src/Dotnet9.Dotnet.Commons/Dotnet9.Commons/Dotnet9.Commons.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<ItemGroup>
-		<PackageReference Include="AsmResolver.DotNet" Version="5.0.0-beta.2" />
+		<PackageReference Include="AsmResolver.DotNet" Version="5.0.0" />
 		<PackageReference Include="FluentValidation" Version="11.4.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
