--- a/src/Dotnet9.WebAPI/src/Services/Dotnet9.Service/appsettings.json
+++ b/src/Dotnet9.WebAPI/src/Services/Dotnet9.Service/appsettings.json
@@ -20,8 +20,8 @@
   },
   "MultilevelCache": {
     "CacheEntryOptions": {
-      "AbsoluteExpirationRelativeToNow": "72:00:00", //绝对过期时间（从当前时间算起）
-      "SlidingExpiration": "00:05:00" //滑动到期时间（从当前时间开始）
+      "AbsoluteExpirationRelativeToNow": "72:00:00",
+      "SlidingExpiration": "00:05:00"
     }
   },
   "AllowedHosts": "*"
