Add the remaining domain definitions for the blog;

--- a/src/Dotnet9.WebAPI/src/Services/Dotnet9.Service/Dotnet9.Service.csproj
+++ b/src/Dotnet9.WebAPI/src/Services/Dotnet9.Service/Dotnet9.Service.csproj
@@ -1,6 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 	
 	<ItemGroup>
+	  <None Remove="Domain\Aggregates\Albums\Album.cs~RF11f4300.TMP" />
+	</ItemGroup>
+	
+	<ItemGroup>
 		<PackageReference Include="Masa.BuildingBlocks.Caching" Version="1.0.0-preview.26" />
 		<PackageReference Include="Masa.BuildingBlocks.Data.MappingExtensions" Version="1.0.0-preview.26" />
 		<PackageReference Include="Masa.BuildingBlocks.Dispatcher.Events" Version="1.0.0-preview.26" />
