add seed datas for blog;

--- a/src/Dotnet9.WebAPI/src/Services/Dotnet9.Service/appsettings.json
+++ b/src/Dotnet9.WebAPI/src/Services/Dotnet9.Service/appsettings.json
@@ -24,5 +24,37 @@
       "SlidingExpiration": "00:05:00"
     }
   },
+  "Site": {
+    "AppName": "Dotnet9",
+    "Description": "一个专注互联网分享精神的博客网站",
+    "Domain": "https://dotnet9.com",
+    "BeiAn": "蜀ICP备19038256号-1",
+    "BeiAnUrl": "https://beian.miit.gov.cn/",
+    "Logo": "https://img1.dotnet9.com/site/logo.png",
+    "Github": "https://github.com/dotnet9/Dotnet9",
+    "Gitee": "https://gitee.com/dotnet9",
+    "AssetsLocalPath": "F:\\github_gitee\\Assets.Dotnet9",
+    "AssetsRemotePath": "https://img1.dotnet9.com",
+    "Owner": "沙漠尽头的狼",
+    "OwnerAvatar": "https://img1.dotnet9.com/site/cat.png",
+    "OwnerDesc": "从事Dotnet开发10年+，此站目的分享以Dotnet为主的技术类文章，以此平台与更多的程序员朋友技术交流，祝愿Dotnet社区发展渐好。",
+    "OwnerWechat": "https://img1.dotnet9.com/site/wechatowner.jpg",
+    "WechatPublic1Name": "Dotnet9",
+    "WechatPublic1": "https://img1.dotnet9.com/site/wechatpublic.jpg",
+    "WechatPublic2Name": "快乐玩转技术",
+    "WechatPublic2": "https://img1.dotnet9.com/lequ.co/8cm.jpg",
+    "QQ": "632871194",
+    "Start": 2019,
+    "WebsiteCreateTime": "2019-11-12",
+    "CSDN": "https://me.csdn.net/HenryMoore",
+    "ZhiHu": "https://www.zhihu.com/people/dotnet9/activities",
+    "JueJin": "https://juejin.im/user/1732486058751934",
+    "Bilibili": "https://space.bilibili.com/470546606",
+    "WeChatPay": "https://img1.dotnet9.com/pays/WeChatPay.jpg",
+    "AliPay": "https://img1.Dotnet9.com/pays/AliPay.jpg",
+    "QQPay": "https://img1.dotnet9.com/pays/QQPay.jpg",
+    "IsCommentReview": 0,
+    "MultiLanguage": 1
+  },
   "AllowedHosts": "*"
 }
