--- a/src/Dotnet9.WebAPI/src/Commons/Dotnet9.Commons/Dotnet9.Commons.csproj
+++ b/src/Dotnet9.WebAPI/src/Commons/Dotnet9.Commons/Dotnet9.Commons.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <PackageReference Include="Masa.BuildingBlocks.Data.MappingExtensions" Version="1.0.0-preview.28" />
+    <PackageReference Include="Masa.Contrib.Configuration" Version="1.0.0-preview.28" />
   </ItemGroup>
-
 </Project>
