--- a/src/Dotnet9.WebAPI/src/Services/Dotnet9.Service/Dotnet9.Service.csproj
+++ b/src/Dotnet9.WebAPI/src/Services/Dotnet9.Service/Dotnet9.Service.csproj
@@ -10,6 +10,7 @@
 		<PackageReference Include="Masa.Contrib.Data.EFCore.PostgreSql" Version="1.0.0-preview.28" />
 		<PackageReference Include="Masa.Contrib.Data.IdGenerator.SequentialGuid" Version="1.0.0-preview.28" />
 		<PackageReference Include="Masa.Contrib.Data.Mapping.Mapster" Version="1.0.0-preview.28" />
+		<PackageReference Include="Masa.Contrib.Development.DaprStarter.AspNetCore" Version="1.0.0-preview.28" />
 		<PackageReference Include="Masa.Contrib.Dispatcher.Events" Version="1.0.0-preview.28" />
 		<PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.EventLogs.EFCore" Version="1.0.0-preview.28" />
 		<PackageReference Include="FluentValidation" Version="11.5.2" />
