--- a/src/Dotnet9.WebAPI/src/Services/Dotnet9.Service/Dotnet9.Service.csproj
+++ b/src/Dotnet9.WebAPI/src/Services/Dotnet9.Service/Dotnet9.Service.csproj
@@ -35,6 +35,7 @@
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+		<PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="6.21.0" />
 	</ItemGroup>
 	
 	<ItemGroup>
