--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Dotnet9.RazorPages.csproj
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Dotnet9.RazorPages.csproj
@@ -6,4 +6,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Dotnet9.WebAPI\src\Contracts\Dotnet9.Contracts\Dotnet9.Contracts.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Pages\Blogs\" />
+  </ItemGroup>
 </Project>
