--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Dotnet9.RazorPages.csproj
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Dotnet9.RazorPages.csproj
@@ -1,12 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <ItemGroup>
+    <PackageReference Include="Markdig" Version="0.31.0" />
     <PackageReference Include="Masa.Contrib.Service.Caller.HttpClient" Version="1.0.0-preview.30" />
     <PackageReference Include="Masa.Utils.Extensions.DependencyInjection" Version="1.0.0-preview.30" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Dotnet9.WebAPI\src\Contracts\Dotnet9.Contracts\Dotnet9.Contracts.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Pages\Blogs\" />
   </ItemGroup>
 </Project>
