--- a/src/Dotnet9.RazorPages/Dotnet9.RazorPages.csproj
+++ b/src/Dotnet9.RazorPages/Dotnet9.RazorPages.csproj
@@ -1,10 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <ItemGroup>
     <PackageReference Include="Markdig" Version="0.31.0" />
+    <PackageReference Include="Masa.BuildingBlocks.Service.Caller" Version="1.0.0-rc.2" />
     <PackageReference Include="Masa.Contrib.Service.Caller.HttpClient" Version="1.0.0-rc.2" />
     <PackageReference Include="Masa.Utils.Extensions.DependencyInjection" Version="1.0.0-rc.2" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Dotnet9.Caller\Dotnet9.Caller.csproj" />
     <ProjectReference Include="..\Dotnet9.Commons\Dotnet9.Commons.csproj" />
     <ProjectReference Include="..\Dotnet9.Contracts\Dotnet9.Contracts.csproj" />
   </ItemGroup>
