--- a/src/Dotnet9.Caller/Dotnet9.Caller.csproj
+++ b/src/Dotnet9.Caller/Dotnet9.Caller.csproj
@@ -5,6 +5,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+    <ProjectReference Include="..\Dotnet9.ASPNETCore\Dotnet9.ASPNETCore.csproj" />
     <ProjectReference Include="..\Dotnet9.Contracts\Dotnet9.Contracts.csproj" />
   </ItemGroup>
 
