--- a/src/Dotnet9.Service/Dotnet9.Service.csproj
+++ b/src/Dotnet9.Service/Dotnet9.Service.csproj
@@ -15,8 +15,8 @@
 		<PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.EventLogs.EFCore" Version="1.0.0-rc.2.1" />
 		<PackageReference Include="FluentValidation" Version="11.5.2" />
 		<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
-		<PackageReference Include="Dapr.Actors.AspNetCore" Version="1.10.0" />
-		<PackageReference Include="Dapr.AspNetCore" Version="1.10.0" />
+		<PackageReference Include="Dapr.Actors.AspNetCore" Version="1.11.0-rc01" />
+		<PackageReference Include="Dapr.AspNetCore" Version="1.11.0-rc01" />
 		<PackageReference Include="Masa.BuildingBlocks.Ddd.Domain" Version="1.0.0-rc.2.1" />
 		<PackageReference Include="Masa.Contrib.Ddd.Domain" Version="1.0.0-rc.2.1" />
 		<PackageReference Include="Masa.Contrib.Ddd.Domain.Repository.EFCore" Version="1.0.0-rc.2.1" />
