--- a/src/Dotnet9.Service/Dotnet9.Service.csproj
+++ b/src/Dotnet9.Service/Dotnet9.Service.csproj
@@ -22,6 +22,7 @@
 		<PackageReference Include="Masa.Contrib.Ddd.Domain.Repository.EFCore" Version="1.0.0-rc.2.1" />
 		<PackageReference Include="Masa.Contrib.ReadWriteSplitting.Cqrs" Version="1.0.0-rc.2.1" />
 		<PackageReference Include="Masa.Contrib.Service.MinimalAPIs" Version="1.0.0-rc.2.1" />
+		<PackageReference Include="Masa.Utils.Security.Cryptography" Version="1.0.0-rc.2.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0-preview.4.23260.4" />
 		<PackageReference Include="Masa.Contrib.Data.UoW.EFCore" Version="1.0.0-rc.2.1" />
 		<PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.Dapr" Version="1.0.0-rc.2.1" />
