--- a/src/Dotnet9.Service/appsettings.json
+++ b/src/Dotnet9.Service/appsettings.json
@@ -18,6 +18,10 @@
     ],
     "DefaultDatabase": 0
   },
+  "Jwt": {
+    "Secret": "aslfhweeukhfbiwjr694ewf",
+    "EffectiveHours": 120
+  },
   "MultilevelCache": {
     "CacheEntryOptions": {
       "AbsoluteExpirationRelativeToNow": "72:00:00",
