--- a/src/Dotnet9.BlazorWebApp/Dotnet9.BlazorWebApp.csproj
+++ b/src/Dotnet9.BlazorWebApp/Dotnet9.BlazorWebApp.csproj
@@ -1,3 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
+  <ItemGroup>
+    <ProjectReference Include="..\Dotnet9.Caller\Dotnet9.Caller.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Pages\" />
+  </ItemGroup>
 </Project>
