--- a/src/Dotnet9.RazorPages/Dotnet9.RazorPages.csproj
+++ b/src/Dotnet9.RazorPages/Dotnet9.RazorPages.csproj
@@ -10,5 +10,6 @@
     <ProjectReference Include="..\Dotnet9.Caller\Dotnet9.Caller.csproj" />
     <ProjectReference Include="..\Dotnet9.Commons\Dotnet9.Commons.csproj" />
     <ProjectReference Include="..\Dotnet9.Contracts\Dotnet9.Contracts.csproj" />
+    <ProjectReference Include="..\Dotnet9.WebShare\Dotnet9.WebShare.csproj" />
   </ItemGroup>
 </Project>
