--- a/src/Dotnet9.WebShare/Dotnet9.WebShare.csproj
+++ b/src/Dotnet9.WebShare/Dotnet9.WebShare.csproj
@@ -1,5 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
+    <PackageReference Include="Markdig" Version="0.31.0" />
     <PackageReference Include="Masa.Blazor" Version="1.0.0-rc.4" />
     <PackageReference Include="Masa.Contrib.Service.Caller.HttpClient" Version="1.0.0-rc.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
