--- a/src/Dotnet9.BlazorWeb/Dotnet9.BlazorWeb.csproj
+++ b/src/Dotnet9.BlazorWeb/Dotnet9.BlazorWeb.csproj
@@ -8,5 +8,6 @@
 	  <ProjectReference Include="..\Dotnet9.Commons\Dotnet9.Commons.csproj" />
 	  <ProjectReference Include="..\Dotnet9.Contracts\Dotnet9.Contracts.csproj" />
 	  <ProjectReference Include="..\Dotnet9.WebShare\Dotnet9.WebShare.csproj" />
+	  <ProjectReference Include="..\Dotnetools.Share\Dotnetools.Share.csproj" />
 	</ItemGroup>
 </Project>
