--- a/src/Dotnetools.Share/Dotnetools.Share.csproj
+++ b/src/Dotnetools.Share/Dotnetools.Share.csproj
@@ -1,6 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <ItemGroup>
+    <Compile Remove="wwwroot\**" />
+    <Content Remove="wwwroot\**" />
+    <EmbeddedResource Remove="wwwroot\**" />
+    <None Remove="wwwroot\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Remove="C:\Users\Administrator\.nuget\packages\masa.blazor\1.0.0-rc.4\contentFiles\any\net6.0\package.json" />
   </ItemGroup>
 
@@ -11,10 +18,6 @@
   <ItemGroup>
     <PackageReference Include="Masa.Blazor" Version="1.0.0-rc.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0-preview.5.23302.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
