--- a/src/Dotnetools.Share/Dotnetools.Share.csproj
+++ b/src/Dotnetools.Share/Dotnetools.Share.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Jint" Version="3.0.0-beta-2049" />
     <PackageReference Include="Masa.Blazor" Version="1.0.0-rc.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0-preview.5.23302.2" />
   </ItemGroup>
