replace part nuget to sdk;

--- a/src/Dotnet9.ASPNETCore/Dotnet9.ASPNETCore.csproj
+++ b/src/Dotnet9.ASPNETCore/Dotnet9.ASPNETCore.csproj
@@ -1,5 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+	  <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 </Project>
