--- a/src/Dotnetools.Helpers.Test/Dotnetools.Helpers.Test.csproj
+++ b/src/Dotnetools.Helpers.Test/Dotnetools.Helpers.Test.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
-    <PackageReference Include="xunit" Version="2.4.2" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.0-preview.23280.1" />
+    <PackageReference Include="xunit" Version="2.5.0-pre.44" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.0-pre.27">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
