change redis client;

--- a/src/Dotnet9.Service/appsettings.json
+++ b/src/Dotnet9.Service/appsettings.json
@@ -7,16 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Username=postgres;Database=Dotnet9;port=5432;password=12312324;"
-  },
-  "RedisConfig": {
-    "Servers": [
-      {
-        "Host": "localhost",
-        "Port": 6379
-      }
-    ],
-    "DefaultDatabase": 0
+    "DefaultConnection": "Host=localhost;Username=postgres;Database=Dotnet9;port=5432;password=12312324;",
+    "Redis": "127.0.0.1:6379,defaultDatabase=0"
   },
   "Jwt": {
     "Secret": "aslfhweeukhfbiwjr694ewf",
