--- a/src/Dotnet9.Commons.Test/Dotnet9.Commons.Test.csproj
+++ b/src/Dotnet9.Commons.Test/Dotnet9.Commons.Test.csproj
@@ -8,8 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.0-preview.23280.1" />
-    <PackageReference Include="xunit" Version="2.5.0-pre.44" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.0-pre.27">
+    <PackageReference Include="xunit" Version="2.5.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
