--- a/src/Dotnet9.Service/Dotnet9.Service.csproj
+++ b/src/Dotnet9.Service/Dotnet9.Service.csproj
@@ -1,13 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 	
 	<ItemGroup>
-		<PackageReference Include="Masa.BuildingBlocks.Caching" Version="1.0.0-rc.3.4" />
+		<PackageReference Include="FreeRedis" Version="1.1.5" />
 		<PackageReference Include="Masa.BuildingBlocks.Data.MappingExtensions" Version="1.0.0-rc.3.4" />
 		<PackageReference Include="Masa.BuildingBlocks.Dispatcher.Events" Version="1.0.0-rc.3.4" />
 		<PackageReference Include="Masa.BuildingBlocks.Exceptions" Version="1.0.0-rc.3.4" />
 		<PackageReference Include="Masa.Contrib.Authentication.Identity" Version="1.0.0-rc.3.4" />
-		<PackageReference Include="Masa.Contrib.Caching.Distributed.StackExchangeRedis" Version="1.0.0-rc.3.4" />
-		<PackageReference Include="Masa.Contrib.Caching.MultilevelCache" Version="1.0.0-rc.3.4" />
 		<PackageReference Include="Masa.Contrib.Data.Contracts" Version="1.0.0-rc.3.4" />
 		<PackageReference Include="Masa.Contrib.Data.EFCore.PostgreSql" Version="1.0.0-rc.3.4" />
 		<PackageReference Include="Masa.Contrib.Data.IdGenerator.SequentialGuid" Version="1.0.0-rc.3.4" />
