--- a/src/Dotnet9.BlazorWeb/appsettings.json
+++ b/src/Dotnet9.BlazorWeb/appsettings.json
@@ -5,6 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Serilog": {
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff}{Level} Message:{Message}{NewLine}{Exception}"
+        }
+      }
+    ]
+  },
   "AllowedHosts": "*",
   "ServiceCaller": {
     "BaseAddress": "http://localhost:5005"
