--- a/src/Dotnet9.Service/appsettings.json
+++ b/src/Dotnet9.Service/appsettings.json
@@ -6,6 +6,17 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Serilog": {
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff}{Level} Message:{Message}{NewLine}{Exception}"
+        }
+      }
+    ]
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Username=postgres;Database=Dotnet9;port=5432;password=12312324;",
     "Redis": "127.0.0.1:6379,defaultDatabase=0"
