--- a/src/Dotnet9.Service/Dotnet9.Service.csproj
+++ b/src/Dotnet9.Service/Dotnet9.Service.csproj
@@ -37,6 +37,11 @@
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0-preview.4" />
+		<PackageReference Include="Serilog" Version="3.0.2-dev-02042" />
+		<PackageReference Include="Serilog.Extensions.Hosting" Version="7.0.0" />
+		<PackageReference Include="Serilog.Settings.Configuration" Version="7.0.0" />
+		<PackageReference Include="Serilog.Sinks.Console" Version="4.1.1-dev-00910" />
+		<PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00947" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 		<PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="8.0.0-preview.4.23259.3-03" />
 	</ItemGroup>
