--- a/src/Dotnet9.ASPNETCore/Dotnet9.ASPNETCore.csproj
+++ b/src/Dotnet9.ASPNETCore/Dotnet9.ASPNETCore.csproj
@@ -2,4 +2,7 @@
   <ItemGroup>
 	  <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Dotnet9.Commons\Dotnet9.Commons.csproj" />
+  </ItemGroup>
 </Project>
