--- a/src/Dotnet9.ASPNETCore/Dotnet9.ASPNETCore.csproj
+++ b/src/Dotnet9.ASPNETCore/Dotnet9.ASPNETCore.csproj
@@ -1,6 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
 	  <FrameworkReference Include="Microsoft.AspNetCore.App" />
+	  <PackageReference Include="StackExchange.Redis" Version="2.6.122" />
+	  <PackageReference Include="Serilog" Version="3.0.2-dev-02042" />
+	  <PackageReference Include="Serilog.Extensions.Hosting" Version="7.0.0" />
+	  <PackageReference Include="Serilog.Settings.Configuration" Version="7.0.0" />
+	  <PackageReference Include="Serilog.Sinks.Console" Version="4.1.1-dev-00910" />
+	  <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00947" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Dotnet9.Commons\Dotnet9.Commons.csproj" />
