--- a/src/Dotnet9.BlazorWeb/appsettings.json
+++ b/src/Dotnet9.BlazorWeb/appsettings.json
@@ -6,6 +6,8 @@
     }
   },
   "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": "Information",
     "WriteTo": [
       {
         "Name": "Console",
@@ -13,8 +15,22 @@
           "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff}{Level} Message:{Message}{NewLine}{Exception}"
         }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/log-.txt",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 30,
+          "fileSizeLimitBytes": 104857600, // 100MB
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
       }
-    ]
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "Application": "Dotnet9BlazorWeb"
+    }
   },
   "AllowedHosts": "*",
   "ServiceCaller": {
