--- a/src/Dotnet9.Service/Dockerfile
+++ b/src/Dotnet9.Service/Dockerfile
@@ -13,7 +13,7 @@ COPY ["Dotnet9.Service/Dotnet9.Service.csproj", "Dotnet9.Service/"]
 COPY ["Dotnet9.ASPNETCore/Dotnet9.ASPNETCore.csproj", "Dotnet9.ASPNETCore/"]
 COPY ["Dotnet9.Commons/Dotnet9.Commons.csproj", "Dotnet9.Commons/"]
 COPY ["Dotnet9.Contracts/Dotnet9.Contracts.csproj", "Dotnet9.Contracts/"]
-RUN dotnet restore "Dotnet9.Service/Dotnet9.Service.csproj"
+# RUN dotnet restore "Dotnet9.Service/Dotnet9.Service.csproj"
 COPY . .
 WORKDIR "/src/Dotnet9.Service"
 RUN dotnet build "Dotnet9.Service.csproj" --os linux -c Release -o /app/build
