--- a/src/Dotnet9.Service/Dockerfile
+++ b/src/Dotnet9.Service/Dockerfile
@@ -5,7 +5,7 @@ USER app
 WORKDIR /app
 EXPOSE 8080
 
-FROM mcr.microsoft.com/dotnet/sdk:8.0-preview AS build
+FROM mcr.microsoft.com/dotnet/sdk:8.0.100-preview.6-bookworm-slim-amd64 AS build
 WORKDIR /src
 COPY ["Directory.Build.Props", "."]
 COPY ["Directory.Build.Targets", "."]
@@ -13,7 +13,7 @@ COPY ["Dotnet9.Service/Dotnet9.Service.csproj", "Dotnet9.Service/"]
 COPY ["Dotnet9.ASPNETCore/Dotnet9.ASPNETCore.csproj", "Dotnet9.ASPNETCore/"]
 COPY ["Dotnet9.Commons/Dotnet9.Commons.csproj", "Dotnet9.Commons/"]
 COPY ["Dotnet9.Contracts/Dotnet9.Contracts.csproj", "Dotnet9.Contracts/"]
-# RUN dotnet restore "Dotnet9.Service/Dotnet9.Service.csproj"
+RUN dotnet restore "Dotnet9.Service/Dotnet9.Service.csproj"
 COPY . .
 WORKDIR "/src/Dotnet9.Service"
 RUN dotnet build "Dotnet9.Service.csproj" --os linux -c Release -o /app/build
