--- a/src/Dotnet9.RazorPages/Dotnet9.RazorPages.csproj
+++ b/src/Dotnet9.RazorPages/Dotnet9.RazorPages.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <ItemGroup>
     <PackageReference Include="Markdig" Version="0.31.0" />
-    <PackageReference Include="Masa.Blazor" Version="1.0.0-rc.6" />
-    <PackageReference Include="Masa.BuildingBlocks.Service.Caller" Version="1.0.0-rc.4.2" />
-    <PackageReference Include="Masa.Contrib.Service.Caller.HttpClient" Version="1.0.0-rc.4.2" />
-    <PackageReference Include="Masa.Utils.Extensions.DependencyInjection" Version="1.0.0-rc.4.2" />
+    <PackageReference Include="Masa.Blazor" Version="1.0.0" />
+    <PackageReference Include="Masa.BuildingBlocks.Service.Caller" Version="1.0.0-rc.4.4" />
+    <PackageReference Include="Masa.Contrib.Service.Caller.HttpClient" Version="1.0.0-rc.4.4" />
+    <PackageReference Include="Masa.Utils.Extensions.DependencyInjection" Version="1.0.0-rc.4.4" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Dotnet9.Caller\Dotnet9.Caller.csproj" />
