--- a/src/Dotnetools.Share/Dotnetools.Share.csproj
+++ b/src/Dotnetools.Share/Dotnetools.Share.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Masa.Blazor" Version="1.0.0-rc.6" />
+    <PackageReference Include="Masa.Blazor" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0-preview.6.23329.11" />
   </ItemGroup>
 
