--- a/src/Dotnet9.Contracts/Dotnet9.Contracts.csproj
+++ b/src/Dotnet9.Contracts/Dotnet9.Contracts.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
-    <PackageReference Include="Masa.BuildingBlocks.Dispatcher.IntegrationEvents" Version="1.0.0-rc.4.4" />
-    <PackageReference Include="Masa.BuildingBlocks.ReadWriteSplitting.Cqrs" Version="1.0.0-rc.4.4" />
+    <PackageReference Include="Masa.BuildingBlocks.Dispatcher.IntegrationEvents" Version="1.0.0" />
+    <PackageReference Include="Masa.BuildingBlocks.ReadWriteSplitting.Cqrs" Version="1.0.0" />
   </ItemGroup>
 </Project>
