--- a/src/Dotnet9Tools/Dotnet9Tools.csproj
+++ b/src/Dotnet9Tools/Dotnet9Tools.csproj
@@ -3,8 +3,8 @@
     <PropertyGroup>
         <NoWarn>8618</NoWarn>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
-        <Version>1.0.8</Version>
-        <Authors>青城</Authors>
+        <Version>0.1.0.0</Version>
+        <Authors>沙漠尽头的狼</Authors>
         <PackageId>Dotnet9Tools</PackageId>
         <NoWarn>1591,8618</NoWarn>
     </PropertyGroup>
@@ -26,7 +26,6 @@
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0-rc.1.23419.4" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0-preview.7" />
-        <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
         <PackageReference Include="Serilog" Version="3.0.2-dev-02044" />
         <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="4.2.0-dev-00918" />
