add seed data; change key type from int to Guid;

--- a/src/Dotnet9Site/appsettings.json
+++ b/src/Dotnet9Site/appsettings.json
@@ -7,7 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "mysql": "server=[host];user id=[user];password=[pwd];port=3306;sslmode=none;database=[database];Pooling=true; Minimum Pool Size=2; Maximum Pool Size=100; Connection Lifetime=0;allowPublicKeyRetrieval=true;",
+    "mysql":
+      "server=[host];user id=[user];password=[pwd];port=3306;sslmode=none;database=[database];Pooling=true; Minimum Pool Size=2; Maximum Pool Size=100; Connection Lifetime=0;allowPublicKeyRetrieval=true;",
     "pgsql": ""
+  },
+  "Site": {
+    "Start": 2019,
+    "AssetsLocalPath": "F:\\github_gitee\\Assets.Dotnet9"
   }
 }
