--- a/src/Dotnet9Api/Dotnet9Api.csproj
+++ b/src/Dotnet9Api/Dotnet9Api.csproj
@@ -9,6 +9,7 @@
         <ProjectReference Include="..\App\Dotnet9.Models\Dotnet9.Models.csproj" />
         <ProjectReference Include="..\App\Dotnet9.Repositoies\Dotnet9.Repositoies.csproj" />
         <ProjectReference Include="..\App\Dotnet9.Services\Dotnet9.Services.csproj" />
+        <ProjectReference Include="..\Dotnet9.Core\Dotnet9.Core.csproj" />
     </ItemGroup>
 
 </Project>
