fix home pager;

--- a/src/App/Dotnet9.Repositoies/Dotnet9.Repositoies.csproj
+++ b/src/App/Dotnet9.Repositoies/Dotnet9.Repositoies.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <ItemGroup>
-        <ProjectReference Include="..\Dotnet9.Models\Dotnet9.Models.csproj"/>
+        <ProjectReference Include="..\..\Dotnet9.Core\Dotnet9.Core.csproj" />
+        <ProjectReference Include="..\Dotnet9.Models\Dotnet9.Models.csproj" />
     </ItemGroup>
 
 </Project>
