Support Short Id navigation to blog posts;

--- a/src/Dotnet9.Core/Dotnet9.Core.csproj
+++ b/src/Dotnet9.Core/Dotnet9.Core.csproj
@@ -1,3 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
+  <ItemGroup>
+    <PackageReference Include="Hashids.net" Version="1.7.0" />
+    <PackageReference Include="Markdig" Version="0.33.0" />
+  </ItemGroup>
 </Project>
