--- a/src/Dotnet9.WebAPI.Infrastructure/Dotnet9.WebAPI.Infrastructure.csproj
+++ b/src/Dotnet9.WebAPI.Infrastructure/Dotnet9.WebAPI.Infrastructure.csproj
@@ -4,7 +4,7 @@
     <PackageReference Include="Mapster" Version="7.4.0-pre06" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0-rc.1.23421.29" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0-rc.1" />
-    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="8.0.0-preview.7.23375.4-03" />
+    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="8.0.0-rc.1.23419.6-01" />
   </ItemGroup>
 
   <ItemGroup>
