--- a/src/Dotnet9.WebAPI/Dotnet9.WebAPI.csproj
+++ b/src/Dotnet9.WebAPI/Dotnet9.WebAPI.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <ItemGroup>
+    <PackageReference Include="Lazy.Captcha.Core" Version="2.0.6" />
     <PackageReference Include="Mapster" Version="7.4.1-pre01" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0-rc.2.23480.1">
       <PrivateAssets>all</PrivateAssets>
