Initialize adding friendship links;

--- a/src/Dotnet9.WebAPI/Dotnet9.Application/applicationsettings.json
+++ b/src/Dotnet9.WebAPI/Dotnet9.Application/applicationsettings.json
@@ -21,6 +21,9 @@
       }
     ]
   },
+  "Site": {
+    "Assets": "F:\\github_gitee\\Assets.Dotnet9"
+  },
   "DynamicApiControllerSettings": {
     "CamelCaseSeparator": ""
   },
